--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
       ],  
       "minimum-stability": "stable",  
       "require": {  
-        "php": ">=5.4.0" 
+        "php": ">=5.4.0" ,
+        "fancyecommerce/fecshop": ">=1.3.1.0",
       },  
       "autoload": {  
         "psr-4": {  
