--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
       "require": {  
         "php": ">=5.4.0" ,
         "fancyecommerce/fecshop": ">=1.3.1.0",
+        "yiisoft/yii2-queue": "~2.0.0"
       },  
       "autoload": {  
         "psr-4": {  
